--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -88,7 +88,7 @@
                 <div class="@ListItemStyle">
                     <CheckedListBox Parent="this" HeightUnit="@HeightUnit" Height="@checkedListheight" Width="@ListItemWidth"
                         ListItemTop="@ListItemTop" ListBackgroundColor="@ListBackgroundColor" ListItemBackgroundColor="@ListItemBackgroundColor"
-                        ListItemHeight="@ListItemHeight"></CheckedListBox>                
+                        ListItemClassName="@ListItemClassName" ListItemHeight="@ListItemHeight"></CheckedListBox>                
                 </div>
             }
             else
