I fixed the CheckedListBox.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -31,7 +31,7 @@
 </Styled>
 <Styled @bind-Classname="ComboBoxStyle">    
     display: inline-block;
-    height: @HeightStyle;
+    height: @ComboBoxHeightStyle;
     width: @ComboBoxWidthStyle;
     min-width: @ComboBoxWidthStyle;
     max-width: @ComboBoxWidthStyle;
@@ -40,6 +40,8 @@
     text-align: center;    
     z-index: @ZIndex;
     background-color: @ComboBoxBackColor;
+    position: @Position;
+    left: @ComboBoxLeft;
 </Styled>
 <Styled @bind-Classname="ListItemStyle">    
     font-family: Verdana;
