I change the ComboBox Label to be just like the ValidationControl, so the controls look roughly the same at different zooms.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -15,7 +15,7 @@
 </Styled>
 <Styled @bind-Classname="LabelStyle">
     display: inline-block;
-    font-size: @TextSizeStyle;
+    font-size: @LabelFontSizeStyle;
     text-align: right;
     background-color: @LabelBackColor;
     margin-right: @LabelMarginRightStyle !important;
@@ -35,7 +35,7 @@
     width: @ComboBoxWidthStyle;
     min-width: @ComboBoxWidthStyle;
     max-width: @ComboBoxWidthStyle;
-    font-size: @TextSizeStyle;    
+    font-size: @LabelFontSizeStyle;
     justify-content: left;
     text-align: center;    
     z-index: @ZIndex;
