--- a/Sprite.razor
+++ b/Sprite.razor
@@ -1,22 +1,24 @@
-﻿@using BlazorStyled
+﻿
+<style>
+    .spritestyle
+    {
+        background-image: url('@ImageUrl');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;   
+        width: @WidthStyle;
+        height: @HeightStyle;
+        position: @Position;
+        top: @YPositionStyle;
+        left: @XPositionStyle;
+        transform: scale(@Scale);
+        transform-origin: left;
+        display: @Display;
+        opacity: @Opacity;
+        transform: rotate(@RotationStyle);
+        z-index: @ZIndex;
+    }
+</style>
 
-<Styled @bind-Classname="@SpriteStyle">
-    background-image: url('@ImageUrl');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;   
-    width: @WidthStyle;
-    height: @HeightStyle;
-    position: @Position;
-    top: @YPositionStyle;
-    left: @XPositionStyle;
-    transform: scale(@Scale);
-    transform-origin: left;
-    display: @Display;
-    opacity: @Opacity;
-    transform: rotate(@RotationStyle);
-    z-index: @ZIndex;
-</Styled>
-
-<div class="@SpriteStyle">
+<div class="spritestyle">
     
 </div>
