Checking in after adding a new feature 'HandleClick' for the Grid.

--- a/Grid.razor
+++ b/Grid.razor
@@ -64,6 +64,10 @@
                             Text="@column.EditorText"  Parent=this></ValidationComponent>
                         </div>
                     }
+                    else if (EnableClick)
+                    {
+                        <div class="down0 @column.ClassName" @onclick="() => OnClick(row, column.ColumnNumber)">@column.ColumnText</div>
+                    }
                     else
                     {
                         <div class="down0 @column.ClassName" @ondblclick="() => OnDoubleClick(row, column.ColumnNumber)">@column.ColumnText</div>
