--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -1,89 +1,78 @@
 ﻿@using DataJuggler.UltimateHelper
 @using DataJuggler.Blazor.Components.Enumerations
+@using BlazorStyled
 
-<style>
-    .grid
-    {
-        display: @DisplayStyle;
-        height: @HeightStyle;
-        justify-content: left;
-        min-width: @WidthStyle;
-        width: @WidthStyle;
-        font-size: @TextSizeStyle;
-        position: @Position;
-        left: @LeftStyle;
-        Top: @TopStyle;
-    }
-    .labelstyle
-    {
-        display: inline-block;
-        font-size: @LabelFontSizeStyle;
-        text-align: right;
-        background-color: @LabelBackColor;
-        margin-right: @LabelMarginRightStyle !important;
-        color: @LabelColorName;    
-        white-space: nowrap;
-        width: @LabelWidthStyle;
-        min-width: @LabelWidthStyle;
-        max-width: @LabelWidthStyle;
-        z-index: @ZIndexMinusStyle;
-        position: @LabelPosition;
-        left: @LabelLeftStyle;
-        top: @LabelTopStyle;
-    }
-    .comboboxstyle
-    {
-        display: inline-block;
-        height: @ComboBoxHeightStyle;
-        width: @ComboBoxWidthStyle;
-        min-width: @ComboBoxWidthStyle;
-        max-width: @ComboBoxWidthStyle;
-        font-size: @LabelFontSizeStyle;
-        justify-content: left;
-        text-align: center;    
-        z-index: @ZIndex;
-        background-color: @ComboBoxBackColor;
-        position: @Position;
-        left: @ComboBoxLeft;
-    }
-    .listitemstyle
-    {
-        font-family: Verdana;
-        text-align: left;
-        background-color: @ListBackgroundColorName;
-        width: @ListItemWidthStyle;
-        height: @CheckedListheight;
-        position: @listItemPosition;
-        color: @ListItemTextColorName;
-        left: @ListItemLeftStyle;
-        top: @ListItemTopStyle;
-        font-size: @TextSizeStyle;
-        z-index: @ZIndex !important;    
-    }
-    .nopadding
-    {
-        margin: 0;
-        padding: 0;
-    }
-    .buttonstyle
-    {
-        display: inline-block;
-        justify-content: left;    
-        text-align: center;
-        width: 100%;
-        position: @ButtonPosition;
-        left: @ButtonLeftStyle;
-        top: @ButtonTopStyle;
-    }
-</style>
+<Styled @bind-Classname=GridStyle>
+    display: @DisplayStyle;
+    height: @HeightStyle;
+    justify-content: left;
+    min-width: @WidthStyle;
+    width: @WidthStyle;
+    font-size: @TextSizeStyle;
+    position: @Position;
+    left: @LeftStyle;
+    Top: @TopStyle;
+</Styled>
+<Styled @bind-Classname=LabelStyle>
+    display: inline-block;
+    font-size: @LabelFontSizeStyle;
+    text-align: right;
+    background-color: @LabelBackColor;
+    margin-right: @LabelMarginRightStyle !important;
+    color: @LabelColorName;
+    white-space: nowrap;
+    width: @LabelWidthStyle;
+    min-width: @LabelWidthStyle;
+    max-width: @LabelWidthStyle;
+    z-index: @ZIndexMinusStyle;
+    position: @LabelPosition;
+    left: @LabelLeftStyle;
+    top: @LabelTopStyle;
+</Styled>
+<Styled @bind-Classname=ComboboxStyle>
+    display: inline-block;
+    height: @ComboBoxHeightStyle;
+    width: @ComboBoxWidthStyle;
+    min-width: @ComboBoxWidthStyle;
+    max-width: @ComboBoxWidthStyle;
+    font-size: @LabelFontSizeStyle;
+    justify-content: left;
+    text-align: center;
+    z-index: @ZIndex;
+    background-color: @ComboBoxBackColor;
+    position: @Position;
+    left: @ComboBoxLeft;
+</Styled>
+<Styled @bind-Classname=ListItemStyle>
+    font-family: Verdana;
+    text-align: left;
+    background-color: @ListBackgroundColorName;
+    width: @ListItemWidthStyle;
+    height: @CheckedListheight;
+    position: @listItemPosition;
+    color: @ListItemTextColorName;
+    left: @ListItemLeftStyle;
+    top: @ListItemTopStyle;
+    font-size: @TextSizeStyle;
+    z-index: @ZIndex !important;
+</Styled>
+<Styled @bind-Classname=ButtonStyle>
+    display: inline-block;
+    justify-content: left;
+    text-align: center;
+    width: 100%;
+    position: @ButtonPosition;
+    left: @ButtonLeftStyle;
+    top: @ButtonTopStyle;
+</Styled>
  
-<div class="grid">
+<div class="@GridStyle">
     @if (ShowLabel)
     {
-        <div class="labelstyle"><span class="@LabelClassName">@LabelText</span></div>
+        <div class="@LabelStyle"><span class="@LabelClassName">@LabelText</span></div>
     }
-    <div class="combobox">
-        <div class="buttonstyle">
+    <div class="@ComboboxStyle">
+        <div class="@ButtonStyle">
             <ImageButton ButtonNumber="1" ButtonText="@ButtonText" HeightUnit="vh" Height="4" Unit="@Unit" Width="@Width"
                 Name="ComboBoxButton" TextSize="@TextSize" Position="relative" Left="@ButtonLeft" Top=@ButtonTop
                 ZIndex="ZIndexPlus" ButtonTextAlign="@TextAlign" TextColor="@ButtonTextColor" 
@@ -94,7 +83,7 @@
         {
             @if (CheckListMode)
             {
-                <div class="listitemstyle">
+                <div class="@ListItemStyle">
                     <CheckedListBox Parent="this" HeightUnit="@HeightUnit" Height="@checkedListheight" Width="@ListItemWidth"
                         ListItemTop="@ListItemTop" ListBackgroundColor="@ListBackgroundColor" ListItemBackgroundColor="@ListItemBackgroundColor"
                         ListItemClassName="@ListItemClassName" ListItemHeight="@ListItemHeight"></CheckedListBox>                
