I changed the color of the image for the color today to be firebrick, and bold.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -123,13 +123,14 @@
     border: 0px;
     background-color: white;
     font-size: 10px;
+    font-weight: bold;
     width: @ColumnWidth2Style;
     min-width: @ColumnWidth2Style;
     max-width: @ColumnWidth2Style;
     display: inline;
     text-align: center;
     height: 100%;
-    color: orange;
+    color: firebrick;
     height: @RowHeightStyle;
     margin: 0px;
     padding: 0px;
