--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -138,14 +138,22 @@
     left: 1px;
 </Styled>
 
-<div class="@ContainerStyle @ClassName">    
-    <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" ClassName="displayinline"
-        Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" Width="@Width">
-    </ValidationComponent>
-    <ImageButton ClassName="@ButtonStyle" ButtonNumber="1" HeightUnit="px" Height="@ButtonHeight" 
-        Unit="px" Width="@ButtonWidth"  Name="CalendarButton" Position="relative" 
-        Left="@ButtonLeft" Top=@ButtonTop  ImageUrl="@ButtonUrl" Parent="this" ClickHandler="@ButtonClicked">
-    </ImageButton>    
+<div class="@ContainerStyle @ClassName">
+    <table>
+        <tr>
+            <td width="@@TextBoxWidth">
+            <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" ClassName="displayinline"
+                Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" Width="@Width">
+            </ValidationComponent>
+            </td>
+            <td width="@ButtonWidth">
+                <ImageButton ClassName="@ButtonStyle" ButtonNumber="1" HeightUnit="px" Height="@ButtonHeight" 
+                    Unit="px" Width="@ButtonWidth"  Name="CalendarButton" Position="relative" 
+                    Left="@ButtonLeft" Top=@ButtonTop  ImageUrl="@ButtonUrl" Parent="this" ClickHandler="@ButtonClicked">
+                </ImageButton>
+            </td>
+        </tr>
+    </table>
 </div>
 <div class="@CalendarStyle">
     <div class="@DayRowStyle">
