I set the LabelClassName's value from the CalendarComponent to the TextBox.LabelClassName.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -141,9 +141,10 @@
 <div class="@ContainerStyle @ClassName">
     <table>
         <tr>
-            <td width="@@TextBoxWidth">
+            <td width="@TextBoxWidth">
             <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" ClassName="displayinline"
-                Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" Width="@Width">
+                Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
+                Width="@Width" LabelClassName="@LabelClassName">
             </ValidationComponent>
             </td>
             <td width="@ButtonWidth">
