Checking in LabelClassName working on the CalendarComponent, and it passes through to the ValidationComponent.LabelClassName.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -140,7 +140,7 @@
 
 <div class="@ContainerStyle @ClassName">
     <table>
-        <tr>
+        <tr class="textdonotwrap">
             <td width="@TextBoxWidth">
             <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" ClassName="displayinline"
                 Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
