--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -20,8 +20,12 @@
 </Styled>
 <Styled @bind-Classname=@ContainerStyle>     
     text-align: left;
+    height: @ControlHeightStyle;
     min-height: @ControlHeightStyle;
+    max-height: @ControlHeightStyle;
+    width: @ControlWidthStyle;
     min-width: @ControlWidthStyle;
+    max-width: @ControlHeightStyle;
     position: @Position;
     top: @TopStyle;
     left: @LeftStyle;
