I changed the Calendar ButtonLeft to default to 262, instead of 264.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -151,7 +151,7 @@
             <td width="@TextBoxWidth">
             <ValidationComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" ClassName="displayinline"
                 Column1Width="@Column1Width" Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
-                Width="@Width" LabelClassName="@LabelClassName">
+                Width="@Width" LabelClassName="@LabelClassName" ZIndex="@Zindex">
             </ValidationComponent>
             </td>
             <td width="@ButtonWidth">
