--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -33,6 +33,7 @@
     font-size: @FontSizeStyle;
     width: @TextBoxWidthStyle;
     overflow: hidden;
+    z-index: @ZIndex;
 </Styled>
 <Styled @bind-Classname=@CheckBoxStyle>
     background-color: @TextBoxBackColor;
