I added the ZIndex of the Calendar to the Calendar ImageButton.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -156,7 +156,7 @@
             </td>
             <td width="@ButtonWidth">
                 <ImageButton ClassName="@ButtonStyle" ButtonNumber="1" HeightUnit="px" Height="@ButtonHeight" 
-                    Unit="px" Width="@ButtonWidth"  Name="CalendarButton" Position="relative" 
+                    Unit="px" Width="@ButtonWidth"  Name="CalendarButton" Position="relative" ZIndex="@Zindex"
                     Left="@ButtonLeft" Top=@ButtonTop  ImageUrl="@ButtonUrl" Parent="this" ClickHandler="@ButtonClicked">
                 </ImageButton>
             </td>
